Added back sample meta file to keep build script intact

--- a/gulpfile.config.json
+++ b/gulpfile.config.json
@@ -6,7 +6,7 @@
   	"images": "src/images/**/*",
   	"js": "src/js/**/*",
     "metaFiles": [
-      "src/sw.js"
+      "src/.htaccess"
     ],
     "vendor": "src/vendor/**/*"
   },
