--- a/package.json
+++ b/package.json
@@ -12,6 +12,7 @@
     "del": "^5.1.0",
     "gulp": "^4.0.2",
     "gulp-cli": "^2.2.0",
-    "gulp-connect": "^5.7.0"
+    "gulp-connect": "^5.7.0",
+    "gulp-file-include": "^2.0.1"
   }
 }
